# vibeguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo_app.py  demo_interactive.html  demo_simple.py  demo_with_real_llm.py  pyproject.toml  setup_github.sh
.github/workflows/: ci.yml
docs/: api-reference.md  authorization.md  dashboard.md  getting-started.md  index.md  integrations.md  policies.md  scanners.md
examples/: basic_usage.py  vibeguard.yaml
src/vibeguard/: __init__.py  cli.py  guard.py  models.py
src/vibeguard/authorization/: __init__.py
src/vibeguard/dashboard/: __init__.py
src/vibeguard/integrations/: __init__.py  anthropic_integration.py  langchain_integration.py  openai_integration.py
src/vibeguard/policies/: __init__.py  policy.py
src/vibeguard/scanners/: __init__.py  base.py  hallucination.py  mcp.py  pii.py  prompt_injection.py  secrets.py  tokens.py  toxicity.py
tests/: test_authorization.py  test_guard.py  test_hallucination.py  test_mcp.py  test_modes.py  test_scanners.py  test_toxicity.py
