[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibeguard"
version = "0.1.1"
description = "Open-source AI security layer for vibe coders and AI companies. Protect your LLM apps from prompt injection, PII leaks, secrets exposure, and more."
readme = "README.md"
license = "MIT"
authors = [
    { name = "MrunmayeeN" }
]
keywords = [
    "ai-security",
    "llm",
    "guardrails",
    "prompt-injection",
    "pii-detection",
    "ai-safety",
    "agentic-ai",
    "mcp",
    "openai",
    "anthropic",
    "langchain"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "regex>=2023.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
langchain = ["langchain>=0.1", "langchain-core>=0.1"]
ml = ["torch>=2.0", "transformers>=4.30"]
dashboard = ["flask>=2.0"]
all = [
    "openai>=1.0",
    "anthropic>=0.18",
    "langchain>=0.1",
    "flask>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/MrunmayeeN/vibeguard"
Documentation = "https://github.com/MrunmayeeN/vibeguard#readme"
Repository = "https://github.com/MrunmayeeN/vibeguard"

[project.scripts]
vibeguard = "vibeguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vibeguard"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
